@@ -19,19 +19,17 @@ package org.apache.lucene.analysis.hunspell;
 import static org.apache.lucene.analysis.hunspell.Dictionary.AFFIX_APPEND;
 import static org.apache.lucene.analysis.hunspell.Dictionary.AFFIX_FLAG;
 import static org.apache.lucene.analysis.hunspell.Dictionary.AFFIX_STRIP_ORD;
-import static org.apache.lucene.analysis.hunspell.Dictionary.FLAG_UNSET;
-import static org.apache.lucene.analysis.hunspell.Dictionary.HIDDEN_FLAG;
 
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.LinkedHashSet;
 import java.util.List;
-import java.util.Objects;
 import java.util.PriorityQueue;
 import java.util.Set;
 import java.util.TreeSet;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
+import java.util.function.Consumer;
+import java.util.function.IntPredicate;
+import org.apache.lucene.util.CharsRef;
 import org.apache.lucene.util.IntsRef;
 import org.apache.lucene.util.fst.FST;
 
@@ -46,13 +44,15 @@ class GeneratingSuggester {
   private static final int MAX_ROOT_LENGTH_DIFF = 4;
   private final Dictionary dictionary;
   private final Hunspell speller;
+  private final SuggestibleEntryCache entryCache;
 
-  GeneratingSuggester(Hunspell speller) {
+  GeneratingSuggester(Hunspell speller, SuggestibleEntryCache entryCache) {
     this.dictionary = speller.dictionary;
     this.speller = speller;
+    this.entryCache = entryCache;
   }
 
-  List<String> suggest(String word, WordCase originalCase, Set<String> prevSuggestions) {
+  List<String> suggest(String word, WordCase originalCase, Set<Suggestion> prevSuggestions) {
     List<Weighted<Root<String>>> roots = findSimilarDictionaryEntries(word, originalCase);
     List<Weighted<String>> expanded = expandRoots(word, roots);
     TreeSet<Weighted<String>> bySimilarity = rankBySimilarity(word, expanded);
@@ -61,85 +61,63 @@ class GeneratingSuggester {
 
   private List<Weighted<Root<String>>> findSimilarDictionaryEntries(
       String word, WordCase originalCase) {
-    Comparator<Weighted<Root<String>>> natural = Comparator.naturalOrder();
-    PriorityQueue<Weighted<Root<String>>> roots = new PriorityQueue<>(natural.reversed());
-    EntryFilter filter = new EntryFilter(dictionary);
+    PriorityQueue<Weighted<Root<String>>> roots = new PriorityQueue<>(Comparator.reverseOrder());
+
+    char[] excludeFlags = dictionary.allNonSuggestibleFlags();
+    FlagEnumerator.Lookup flagLookup = dictionary.flagLookup;
+    IntPredicate isSuggestible = formId -> !flagLookup.hasAnyFlag(formId, excludeFlags);
+
     boolean ignoreTitleCaseRoots = originalCase == WordCase.LOWER && !dictionary.hasLanguage("de");
-    TrigramAutomaton automaton =
-        new TrigramAutomaton(word) {
-          @Override
-          char transformChar(char c) {
-            return dictionary.caseFold(c);
-          }
-        };
+    TrigramAutomaton automaton = new TrigramAutomaton(word);
 
-    dictionary.words.processAllWords(
-        Math.max(1, word.length() - 4),
-        word.length() + 4,
-        (rootChars, forms) -> {
-          speller.checkCanceled.run();
-
-          assert rootChars.length > 0;
-          if (Math.abs(rootChars.length - word.length()) > MAX_ROOT_LENGTH_DIFF) {
-            assert rootChars.length < word.length(); // processAllWords takes care of longer keys
+    processSuggestibleWords(
+        Math.max(1, word.length() - MAX_ROOT_LENGTH_DIFF),
+        word.length() + MAX_ROOT_LENGTH_DIFF,
+        (entry) -> {
+          if (ignoreTitleCaseRoots && entry.hasTitleCase()) {
             return;
           }
 
-          int suitable = filter.findSuitableFormIndex(forms, 0);
-          if (suitable < 0) return;
-
-          if (ignoreTitleCaseRoots
-              && Character.isUpperCase(rootChars.charAt(0))
-              && WordCase.caseOf(rootChars) == WordCase.TITLE) {
-            return;
-          }
-
-          int sc = automaton.ngramScore(rootChars);
+          int sc = automaton.ngramScore(entry.lowerCaseRoot());
           if (sc == 0) {
             return; // no common characters at all, don't suggest this root
           }
 
+          CharsRef rootChars = entry.root();
           sc += commonPrefix(word, rootChars) - longerWorsePenalty(word.length(), rootChars.length);
 
-          if (roots.size() == MAX_ROOTS && sc < roots.peek().score) {
+          if (roots.size() == MAX_ROOTS && isWorseThan(sc, rootChars, roots.peek())) {
             return;
           }
 
+          speller.checkCanceled.run();
+
           String root = rootChars.toString();
-          do {
-            roots.add(new Weighted<>(new Root<>(root, forms.ints[forms.offset + suitable]), sc));
-            suitable = filter.findSuitableFormIndex(forms, suitable + filter.formStep);
-          } while (suitable > 0);
-          while (roots.size() > MAX_ROOTS) {
-            roots.poll();
+          IntsRef forms = entry.forms();
+          for (int i = 0; i < forms.length; i++) {
+            if (isSuggestible.test(forms.ints[forms.offset + i])) {
+              roots.add(new Weighted<>(new Root<>(root, forms.ints[forms.offset + i]), sc));
+              if (roots.size() == MAX_ROOTS) {
+                roots.poll();
+              }
+            }
           }
         });
 
-    return roots.stream().sorted().collect(Collectors.toList());
+    return roots.stream().sorted().toList();
   }
 
-  private static class EntryFilter {
-    private final int formStep;
-    private final FlagEnumerator.Lookup flagLookup;
-    private final char[] excludeFlags;
+  private static boolean isWorseThan(int score, CharsRef candidate, Weighted<Root<String>> root) {
+    return score < root.score
+        || score == root.score && CharSequence.compare(candidate, root.word.word()) > 0;
+  }
 
-    EntryFilter(Dictionary dic) {
-      formStep = dic.formStep();
-      flagLookup = dic.flagLookup;
-
-      Character[] flags = {HIDDEN_FLAG, dic.noSuggest, dic.forbiddenword, dic.onlyincompound};
-      excludeFlags =
-          Dictionary.toSortedCharArray(
-              Stream.of(flags).filter(c -> c != FLAG_UNSET).collect(Collectors.toSet()));
-    }
-
-    int findSuitableFormIndex(IntsRef forms, int start) {
-      for (int i = start; i < forms.length; i += formStep) {
-        if (!flagLookup.hasAnyFlag(forms.ints[forms.offset + i], excludeFlags)) {
-          return i;
-        }
-      }
-      return -1;
+  private void processSuggestibleWords(
+      int minLength, int maxLength, Consumer<FlyweightEntry> processor) {
+    if (entryCache != null) {
+      entryCache.processSuggestibleWords(minLength, maxLength, processor);
+    } else {
+      dictionary.words.processSuggestibleWords(minLength, maxLength, processor);
     }
   }
 
@@ -159,7 +137,7 @@ class GeneratingSuggester {
         }
       }
     }
-    return expanded.stream().limit(MAX_GUESSES).collect(Collectors.toList());
+    return expanded.stream().limit(MAX_GUESSES).toList();
   }
 
   // find minimum threshold for a passable suggestion
@@ -182,11 +160,11 @@ class GeneratingSuggester {
     List<char[]> crossProducts = new ArrayList<>();
     Set<String> result = new LinkedHashSet<>();
 
-    if (!dictionary.hasFlag(root.entryId, dictionary.needaffix)) {
-      result.add(root.word);
+    if (!dictionary.hasFlag(root.entryId(), dictionary.needaffix)) {
+      result.add(root.word());
     }
 
-    char[] wordChars = root.word.toCharArray();
+    char[] wordChars = root.word().toCharArray();
 
     // suffixes
     processAffixes(
@@ -200,7 +178,7 @@ class GeneratingSuggester {
           }
 
           String suffix = misspelled.substring(misspelled.length() - suffixLength);
-          String withSuffix = root.word.substring(0, root.word.length() - stripLength) + suffix;
+          String withSuffix = root.word().substring(0, root.word().length() - stripLength) + suffix;
           result.add(withSuffix);
           if (dictionary.isCrossProduct(suffixId)) {
             crossProducts.add(withSuffix.toCharArray());
@@ -212,7 +190,7 @@ class GeneratingSuggester {
         true,
         misspelled,
         (prefixLength, prefixId) -> {
-          if (!dictionary.hasFlag(root.entryId, dictionary.affixData(prefixId, AFFIX_FLAG))
+          if (!dictionary.hasFlag(root.entryId(), dictionary.affixData(prefixId, AFFIX_FLAG))
               || !dictionary.isCrossProduct(prefixId)) {
             return;
           }
@@ -237,11 +215,11 @@ class GeneratingSuggester {
           if (hasCompatibleFlags(root, prefixId)
               && checkAffixCondition(prefixId, wordChars, stripLength, stemLength)) {
             String prefix = misspelled.substring(0, prefixLength);
-            result.add(prefix + root.word.substring(stripLength));
+            result.add(prefix + root.word().substring(stripLength));
           }
         });
 
-    return result.stream().limit(MAX_WORDS).collect(Collectors.toList());
+    return result.stream().limit(MAX_WORDS).toList();
   }
 
   private void processAffixes(boolean prefixes, String word, AffixProcessor processor) {
@@ -283,7 +261,7 @@ class GeneratingSuggester {
   }
 
   private boolean hasCompatibleFlags(Root<?> root, int affixId) {
-    if (!dictionary.hasFlag(root.entryId, dictionary.affixData(affixId, AFFIX_FLAG))) {
+    if (!dictionary.hasFlag(root.entryId(), dictionary.affixData(affixId, AFFIX_FLAG))) {
       return false;
     }
 
@@ -331,7 +309,7 @@ class GeneratingSuggester {
   }
 
   private List<String> getMostRelevantSuggestions(
-      TreeSet<Weighted<String>> bySimilarity, Set<String> prevSuggestions) {
+      TreeSet<Weighted<String>> bySimilarity, Set<Suggestion> prevSuggestions) {
     List<String> result = new ArrayList<>();
     boolean hasExcellent = false;
     for (Weighted<String> weighted : bySimilarity) {
@@ -347,7 +325,7 @@ class GeneratingSuggester {
         break;
       }
 
-      if (prevSuggestions.stream().noneMatch(weighted.word::contains)
+      if (prevSuggestions.stream().noneMatch(s -> weighted.word.contains(s.raw))
           && result.stream().noneMatch(weighted.word::contains)
           && speller.checkWord(weighted.word)) {
         result.add(weighted.word);
@@ -467,28 +445,8 @@ class GeneratingSuggester {
     return commonScore;
   }
 
-  private static class Weighted<T extends Comparable<T>> implements Comparable<Weighted<T>> {
-    final T word;
-    final int score;
-
-    Weighted(T word, int score) {
-      this.word = word;
-      this.score = score;
-    }
-
-    @Override
-    public boolean equals(Object o) {
-      if (this == o) return true;
-      if (!(o instanceof Weighted)) return false;
-      @SuppressWarnings("unchecked")
-      Weighted<T> that = (Weighted<T>) o;
-      return score == that.score && word.equals(that.word);
-    }
-
-    @Override
-    public int hashCode() {
-      return Objects.hash(word, score);
-    }
+  private record Weighted<T extends Comparable<T>>(T word, int score)
+      implements Comparable<Weighted<T>> {
 
     @Override
     public String toString() {
