@@ -28,14 +28,15 @@ import java.text.ParseException;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Set;
 import java.util.TreeMap;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import org.apache.lucene.store.ByteBuffersDirectory;
 import org.apache.lucene.store.Directory;
+import org.apache.lucene.tests.util.LuceneTestCase;
 import org.apache.lucene.util.IntsRef;
-import org.apache.lucene.util.LuceneTestCase;
 import org.junit.Test;
 
 public class TestDictionary extends LuceneTestCase {
@@ -85,11 +86,16 @@ public class TestDictionary extends LuceneTestCase {
     }
   }
 
+  public void testProcessSuggestibleWords() throws Exception {
+    Dictionary dictionary = loadDictionary("suggestible.aff", "suggestible.dic");
+
+    Set<String> processed = processSuggestibleWords(dictionary, 1, 100);
+    assertEquals(Set.of("normal", "ambiguous"), processed);
+  }
+
   private void checkProcessWords(
       Dictionary dictionary, Set<String> allWords, int minLength, int maxLength) {
-    Set<String> processed = new HashSet<>();
-    dictionary.words.processAllWords(
-        minLength, maxLength, (word, __) -> processed.add(word.toString()));
+    Set<String> processed = processSuggestibleWords(dictionary, minLength, maxLength);
 
     Set<String> filtered =
         allWords.stream()
@@ -97,6 +103,20 @@ public class TestDictionary extends LuceneTestCase {
             .collect(Collectors.toSet());
 
     assertEquals("For lengths [" + minLength + "," + maxLength + "]", filtered, processed);
+  }
+
+  private static Set<String> processSuggestibleWords(
+      Dictionary dictionary, int minLength, int maxLength) {
+    Set<String> processed = new HashSet<>();
+    dictionary.words.processSuggestibleWords(
+        minLength, maxLength, e -> processed.add(e.root().toString()));
+
+    Set<String> cached = new HashSet<>();
+    SuggestibleEntryCache.buildCache(dictionary.words)
+        .processSuggestibleWords(minLength, maxLength, e -> cached.add(e.root().toString()));
+    assertEquals(processed, cached);
+
+    return processed;
   }
 
   public void testCompressedDictionary() throws Exception {
@@ -129,6 +149,19 @@ public class TestDictionary extends LuceneTestCase {
         expectThrows(ParseException.class, () -> loadDictionary("broken.aff", "simple.dic"));
     assertTrue(expected.getMessage().startsWith("Invalid syntax"));
     assertEquals(24, expected.getErrorOffset());
+
+    List<String> names =
+        List.of(
+            "broken_missingAffRule.aff",
+            "broken_extraAffRule.aff",
+            "broken_extraAffRule_last.aff",
+            "broken_extraAffRule_beforeAnother.aff",
+            "broken_mismatchedAffix.aff");
+
+    for (String name : names) {
+      String msg = "Expected ParseException on " + name;
+      expectThrows(ParseException.class, msg, () -> loadDictionary(name, "simple.dic"));
+    }
   }
 
   public void testUsingFlagsBeforeFlagDirective() throws IOException, ParseException {
@@ -146,12 +179,13 @@ public class TestDictionary extends LuceneTestCase {
   }
 
   public void testForgivableErrors() throws Exception {
-    Dictionary dictionary = loadDictionary("forgivable-errors.aff", "forgivable-errors.dic");
+    Dictionary dictionary =
+        loadForgivingDictionary("forgivable-errors.aff", "forgivable-errors.dic");
     assertEquals(1, dictionary.repTable.size());
     assertEquals(2, dictionary.compoundMax);
 
-    loadDictionary("forgivable-errors-long.aff", "single-word.dic");
-    loadDictionary("forgivable-errors-num.aff", "single-word.dic");
+    loadForgivingDictionary("forgivable-errors-long.aff", "single-word.dic");
+    loadForgivingDictionary("forgivable-errors-num.aff", "single-word.dic");
   }
 
   private Dictionary loadDictionary(String aff, String dic) throws IOException, ParseException {
@@ -159,6 +193,25 @@ public class TestDictionary extends LuceneTestCase {
         InputStream dicStream = getClass().getResourceAsStream(dic);
         Directory tempDir = getDirectory()) {
       return new Dictionary(tempDir, "dictionary", affixStream, dicStream);
+    }
+  }
+
+  private Dictionary loadForgivingDictionary(String aff, String dic)
+      throws IOException, ParseException {
+    try (InputStream affixStream = getClass().getResourceAsStream(aff);
+        InputStream dicStream = getClass().getResourceAsStream(dic);
+        Directory tempDir = getDirectory()) {
+      return new Dictionary(tempDir, "dictionary", affixStream, dicStream) {
+        @Override
+        protected boolean tolerateAffixRuleCountMismatches() {
+          return true;
+        }
+
+        @Override
+        protected boolean tolerateDuplicateConversionMappings() {
+          return true;
+        }
+      };
     }
   }
 
@@ -275,7 +328,9 @@ public class TestDictionary extends LuceneTestCase {
     DictEntries simpleNoun = dic.lookupEntries("simplenoun");
     assertEquals(1, simpleNoun.size());
     assertEquals(Collections.emptyList(), simpleNoun.getMorphologicalValues(0, "aa:"));
-    assertEquals(Collections.singletonList("42"), simpleNoun.getMorphologicalValues(0, "fr:"));
+    assertEquals(List.of("42"), simpleNoun.getMorphologicalValues(0, "fr:"));
+    assertEquals(List.of("42"), simpleNoun.get(0).getMorphologicalValues("fr:"));
+    assertEquals("A", simpleNoun.get(0).getFlags());
 
     DictEntries lay = dic.lookupEntries("lay");
     String actual =
