@@ -16,28 +16,21 @@
  */
 package org.apache.lucene.store;
 
-import static java.lang.invoke.MethodHandles.*;
-import static java.lang.invoke.MethodType.methodType;
+import static org.apache.lucene.index.IndexFileNames.CODEC_FILE_PATTERN;
 
 import java.io.IOException;
-import java.lang.invoke.MethodHandle;
-import java.lang.reflect.Field;
-import java.nio.ByteBuffer;
-import java.nio.ByteOrder;
-import java.nio.MappedByteBuffer;
+import java.lang.invoke.MethodHandles;
+import java.lang.invoke.MethodType;
 import java.nio.channels.ClosedChannelException; // javadoc @link
-import java.nio.channels.FileChannel;
-import java.nio.channels.FileChannel.MapMode;
 import java.nio.file.Path;
-import java.nio.file.StandardOpenOption;
-import java.security.AccessController;
-import java.security.PrivilegedAction;
 import java.util.Locale;
-import java.util.Objects;
+import java.util.Optional;
 import java.util.concurrent.Future;
-import org.apache.lucene.store.ByteBufferGuard.BufferCleaner;
+import java.util.function.BiPredicate;
+import java.util.function.Function;
+import java.util.logging.Logger;
+import org.apache.lucene.index.IndexFileNames;
 import org.apache.lucene.util.Constants;
-import org.apache.lucene.util.SuppressForbidden;
 
 /**
  * File-based {@link Directory} implementation that uses mmap for reading, and {@link
@@ -47,27 +40,31 @@ import org.apache.lucene.util.SuppressForbidden;
  * process equal to the size of the file being mapped. Before using this class, be sure your have
  * plenty of virtual address space, e.g. by using a 64 bit JRE, or a 32 bit JRE with indexes that
  * are guaranteed to fit within the address space. On 32 bit platforms also consult {@link
- * #MMapDirectory(Path, LockFactory, int)} if you have problems with mmap failing because of
- * fragmented address space. If you get an OutOfMemoryException, it is recommended to reduce the
- * chunk size, until it works.
+ * #MMapDirectory(Path, LockFactory, long)} if you have problems with mmap failing because of
+ * fragmented address space. If you get an {@link IOException} about mapping failed, it is
+ * recommended to reduce the chunk size, until it works.
  *
- * <p>Due to <a href="http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=4724038">this bug</a> in
- * Sun's JRE, MMapDirectory's {@link IndexInput#close} is unable to close the underlying OS file
- * handle. Only when GC finally collects the underlying objects, which could be quite some time
- * later, will the file handle be closed.
+ * <p>This class supports preloading files into physical memory upon opening. This can help improve
+ * performance of searches on a cold page cache at the expense of slowing down opening an index. See
+ * {@link #setPreload(BiPredicate)} for more details.
  *
- * <p>This will consume additional transient disk usage: on Windows, attempts to delete or overwrite
- * the files will result in an exception; on other platforms, which typically have a &quot;delete on
- * last close&quot; semantics, while such operations will succeed, the bytes are still consuming
- * space on disk. For many applications this limitation is not a problem (e.g. if you have plenty of
- * disk space, and you don't rely on overwriting files on Windows) but it's still an important
- * limitation to be aware of.
+ * <p>This class supports grouping of files that are part of the same logical group. This is a hint
+ * that allows for better handling of resources. For example, individual files that are part of the
+ * same segment can be considered part of the same logical group. See {@link
+ * #setGroupingFunction(Function)} for more details.
  *
- * <p>This class supplies the workaround mentioned in the bug report (see {@link #setUseUnmap}),
- * which may fail on non-Oracle/OpenJDK JVMs. It forcefully unmaps the buffer on close by using an
- * undocumented internal cleanup functionality. If {@link #UNMAP_SUPPORTED} is <code>true</code>,
- * the workaround will be automatically enabled (with no guarantees; if you discover any problems,
- * you can disable it).
+ * <p>This class will use the modern {@link java.lang.foreign.MemorySegment} API available since
+ * Java 21 which allows to safely unmap previously mmapped files after closing the {@link
+ * IndexInput}s. There is no need to enable the "preview feature" of your Java version; it works out
+ * of box with some compilation tricks. For more information about the foreign memory API read
+ * documentation of the {@link java.lang.foreign} package.
+ *
+ * <p>On some platforms like Linux and MacOS X, this class will invoke the syscall {@code madvise()}
+ * to advise how OS kernel should handle paging after opening a file. For this to work, Java code
+ * must be able to call native code. If this is not allowed, a warning is logged. To enable native
+ * access for Lucene in a modularized application, pass {@code
+ * --enable-native-access=org.apache.lucene.core} to the Java command line. If Lucene is running in
+ * a classpath-based application, use {@code --enable-native-access=ALL-UNNAMED}.
  *
  * <p><b>NOTE:</b> Accessing this class either directly or indirectly from a thread while it's
  * interrupted can close the underlying channel immediately if at the same time the thread is
@@ -76,19 +73,85 @@ import org.apache.lucene.util.SuppressForbidden;
  * Thread#interrupt()} or {@link Future#cancel(boolean)} you should use the legacy {@code
  * RAFDirectory} from the Lucene {@code misc} module in favor of {@link MMapDirectory}.
  *
- * @see <a href="http://blog.thetaphi.de/2012/07/use-lucenes-mmapdirectory-on-64bit.html">Blog post
+ * <p><b>NOTE:</b> If your application requires external synchronization, you should <b>not</b>
+ * synchronize on the <code>MMapDirectory</code> instance as this may cause deadlock; use your own
+ * (non-Lucene) objects instead.
+ *
+ * @see <a href="https://blog.thetaphi.de/2012/07/use-lucenes-mmapdirectory-on-64bit.html">Blog post
  *     about MMapDirectory</a>
  */
 public class MMapDirectory extends FSDirectory {
-  private boolean useUnmapHack = UNMAP_SUPPORTED;
-  private boolean preload;
 
   /**
-   * Default max chunk size.
-   *
-   * @see #MMapDirectory(Path, LockFactory, int)
+   * Argument for {@link #setPreload(BiPredicate)} that configures all files to be preloaded upon
+   * opening them.
    */
-  public static final int DEFAULT_MAX_CHUNK_SIZE = Constants.JRE_IS_64BIT ? (1 << 30) : (1 << 28);
+  public static final BiPredicate<String, IOContext> ALL_FILES = (filename, context) -> true;
+
+  /**
+   * Argument for {@link #setPreload(BiPredicate)} that configures no files to be preloaded upon
+   * opening them.
+   */
+  public static final BiPredicate<String, IOContext> NO_FILES = (filename, context) -> false;
+
+  /**
+   * This sysprop allows to control the total maximum number of mmapped files that can be associated
+   * with a single shared {@link java.lang.foreign.Arena foreign Arena}. For example, to set the max
+   * number of permits to 256, pass the following on the command line pass {@code
+   * -Dorg.apache.lucene.store.MMapDirectory.sharedArenaMaxPermits=256}. Setting a value of 1
+   * associates one file to one shared arena.
+   *
+   * @lucene.internal
+   */
+  public static final String SHARED_ARENA_MAX_PERMITS_SYSPROP =
+      "org.apache.lucene.store.MMapDirectory.sharedArenaMaxPermits";
+
+  /** Argument for {@link #setGroupingFunction(Function)} that configures no grouping. */
+  public static final Function<String, Optional<String>> NO_GROUPING = filename -> Optional.empty();
+
+  /** Argument for {@link #setGroupingFunction(Function)} that configures grouping by segment. */
+  public static final Function<String, Optional<String>> GROUP_BY_SEGMENT =
+      filename -> {
+        if (!CODEC_FILE_PATTERN.matcher(filename).matches()) {
+          return Optional.empty();
+        }
+        String groupKey = IndexFileNames.parseSegmentName(filename).substring(1);
+        try {
+          // keep the original generation (=0) in base group, later generations in extra group
+          if (IndexFileNames.parseGeneration(filename) > 0) {
+            groupKey += "-g";
+          }
+        } catch (
+            @SuppressWarnings("unused")
+            NumberFormatException unused) {
+          // does not confirm to the generation syntax, or trash
+        }
+        return Optional.of(groupKey);
+      };
+
+  /**
+   * Argument for {@link #setPreload(BiPredicate)} that configures files to be preloaded upon
+   * opening them if they use the {@link ReadAdvice#RANDOM_PRELOAD} advice.
+   */
+  public static final BiPredicate<String, IOContext> BASED_ON_LOAD_IO_CONTEXT =
+      (filename, context) -> context.readAdvice() == ReadAdvice.RANDOM_PRELOAD;
+
+  private BiPredicate<String, IOContext> preload = NO_FILES;
+
+  /**
+   * Default max chunk size:
+   *
+   * <ul>
+   *   <li>16 GiBytes for 64 bit JVMs
+   *   <li>256 MiBytes for 32 bit JVMs
+   * </ul>
+   */
+  public static final long DEFAULT_MAX_CHUNK_SIZE;
+
+  /** A provider specific context object or null, that will be passed to openInput. */
+  final Object attachment = PROVIDER.attachment();
+
+  private Function<String, Optional<String>> groupingFunction = GROUP_BY_SEGMENT;
 
   final int chunkSizePower;
 
@@ -120,11 +183,11 @@ public class MMapDirectory extends FSDirectory {
    * directory is created at the named location if it does not yet exist.
    *
    * @param path the path of the directory
-   * @param maxChunkSize maximum chunk size (default is 1 GiBytes for 64 bit JVMs and 256 MiBytes
-   *     for 32 bit JVMs) used for memory mapping.
+   * @param maxChunkSize maximum chunk size (for default see {@link #DEFAULT_MAX_CHUNK_SIZE}) used
+   *     for memory mapping.
    * @throws IOException if there is a low-level I/O error
    */
-  public MMapDirectory(Path path, int maxChunkSize) throws IOException {
+  public MMapDirectory(Path path, long maxChunkSize) throws IOException {
     this(path, FSLockFactory.getDefault(), maxChunkSize);
   }
 
@@ -135,94 +198,65 @@ public class MMapDirectory extends FSDirectory {
    * <p>Especially on 32 bit platform, the address space can be very fragmented, so large index
    * files cannot be mapped. Using a lower chunk size makes the directory implementation a little
    * bit slower (as the correct chunk may be resolved on lots of seeks) but the chance is higher
-   * that mmap does not fail. On 64 bit Java platforms, this parameter should always be {@code 1 <<
-   * 30}, as the address space is big enough.
+   * that mmap does not fail. On 64 bit Java platforms, this parameter should always be large (like
+   * 1 GiBytes, or even larger with recent Java versions), as the address space is big enough. If it
+   * is larger, fragmentation of address space increases, but number of file handles and mappings is
+   * lower for huge installations with many open indexes.
    *
    * <p><b>Please note:</b> The chunk size is always rounded down to a power of 2.
    *
    * @param path the path of the directory
    * @param lockFactory the lock factory to use, or null for the default ({@link
    *     NativeFSLockFactory});
-   * @param maxChunkSize maximum chunk size (default is 1 GiBytes for 64 bit JVMs and 256 MiBytes
-   *     for 32 bit JVMs) used for memory mapping.
+   * @param maxChunkSize maximum chunk size (for default see {@link #DEFAULT_MAX_CHUNK_SIZE}) used
+   *     for memory mapping.
    * @throws IOException if there is a low-level I/O error
    */
-  public MMapDirectory(Path path, LockFactory lockFactory, int maxChunkSize) throws IOException {
+  public MMapDirectory(Path path, LockFactory lockFactory, long maxChunkSize) throws IOException {
     super(path, lockFactory);
-    if (maxChunkSize <= 0) {
+    if (maxChunkSize <= 0L) {
       throw new IllegalArgumentException("Maximum chunk size for mmap must be >0");
     }
-    this.chunkSizePower = 31 - Integer.numberOfLeadingZeros(maxChunkSize);
-    assert this.chunkSizePower >= 0 && this.chunkSizePower <= 30;
+    this.chunkSizePower = Long.SIZE - 1 - Long.numberOfLeadingZeros(maxChunkSize);
+    assert (1L << chunkSizePower) <= maxChunkSize;
+    assert (1L << chunkSizePower) > (maxChunkSize / 2);
   }
 
   /**
-   * This method enables the workaround for unmapping the buffers from address space after closing
-   * {@link IndexInput}, that is mentioned in the bug report. This hack may fail on
-   * non-Oracle/OpenJDK JVMs. It forcefully unmaps the buffer on close by using an undocumented
-   * internal cleanup functionality.
+   * Configure which files to preload in physical memory upon opening. The default implementation
+   * does not preload anything. The behavior is best effort and operating system-dependent.
    *
-   * <p><b>NOTE:</b> Enabling this is completely unsupported by Java and may lead to JVM crashes if
-   * <code>IndexInput</code> is closed while another thread is still accessing it (SIGSEGV).
-   *
-   * <p>To enable the hack, the following requirements need to be fulfilled: The used JVM must be
-   * Oracle Java / OpenJDK 8 <em>(preliminary support for Java 9 EA build 150+ was added with Lucene
-   * 6.4)</em>. In addition, the following permissions need to be granted to {@code lucene-core.jar}
-   * in your <a
-   * href="http://docs.oracle.com/javase/8/docs/technotes/guides/security/PolicyFiles.html">policy
-   * file</a>:
-   *
-   * <ul>
-   *   <li>{@code permission java.lang.reflect.ReflectPermission "suppressAccessChecks";}
-   *   <li>{@code permission java.lang.RuntimePermission "accessClassInPackage.sun.misc";}
-   * </ul>
-   *
-   * @throws IllegalArgumentException if {@link #UNMAP_SUPPORTED} is <code>false</code> and the
-   *     workaround cannot be enabled. The exception message also contains an explanation why the
-   *     hack cannot be enabled (e.g., missing permissions).
+   * @param preload a {@link BiPredicate} whose first argument is the file name, and second argument
+   *     is the {@link IOContext} used to open the file
+   * @see #ALL_FILES
+   * @see #NO_FILES
    */
-  public void setUseUnmap(final boolean useUnmapHack) {
-    if (useUnmapHack && !UNMAP_SUPPORTED) {
-      throw new IllegalArgumentException(UNMAP_NOT_SUPPORTED_REASON);
-    }
-    this.useUnmapHack = useUnmapHack;
-  }
-
-  /**
-   * Returns <code>true</code>, if the unmap workaround is enabled.
-   *
-   * @see #setUseUnmap
-   */
-  public boolean getUseUnmap() {
-    return useUnmapHack;
-  }
-
-  /**
-   * Set to {@code true} to ask mapped pages to be loaded into physical memory on init. The behavior
-   * is best-effort and operating system dependent.
-   *
-   * @see MappedByteBuffer#load
-   */
-  public void setPreload(boolean preload) {
+  public void setPreload(BiPredicate<String, IOContext> preload) {
     this.preload = preload;
   }
 
   /**
-   * Returns {@code true} if mapped pages should be loaded.
+   * Configures a grouping function for files that are part of the same logical group. The gathering
+   * of files into a logical group is a hint that allows for better handling of resources.
    *
-   * @see #setPreload
+   * <p>By default, grouping is {@link #GROUP_BY_SEGMENT}. To disable, invoke this method with
+   * {@link #NO_GROUPING}.
+   *
+   * @param groupingFunction a function that accepts a file name and returns an optional group key.
+   *     If the optional is present, then its value is the logical group to which the file belongs.
+   *     Otherwise, the file name if not associated with any logical group.
    */
-  public boolean getPreload() {
-    return preload;
+  public void setGroupingFunction(Function<String, Optional<String>> groupingFunction) {
+    this.groupingFunction = groupingFunction;
   }
 
   /**
    * Returns the current mmap chunk size.
    *
-   * @see #MMapDirectory(Path, LockFactory, int)
+   * @see #MMapDirectory(Path, LockFactory, long)
    */
-  public final int getMaxChunkSize() {
-    return 1 << chunkSizePower;
+  public final long getMaxChunkSize() {
+    return 1L << chunkSizePower;
   }
 
   /** Creates an IndexInput for the file with the given name. */
@@ -231,175 +265,130 @@ public class MMapDirectory extends FSDirectory {
     ensureOpen();
     ensureCanRead(name);
     Path path = directory.resolve(name);
-    try (FileChannel c = FileChannel.open(path, StandardOpenOption.READ)) {
-      final String resourceDescription = "MMapIndexInput(path=\"" + path.toString() + "\")";
-      final boolean useUnmap = getUseUnmap();
-      return ByteBufferIndexInput.newInstance(
-          resourceDescription,
-          map(resourceDescription, c, 0, c.size()),
-          c.size(),
-          chunkSizePower,
-          new ByteBufferGuard(resourceDescription, useUnmap ? CLEANER : null));
+    return PROVIDER.openInput(
+        path,
+        context,
+        chunkSizePower,
+        preload.test(name, context),
+        groupingFunction.apply(name),
+        attachment);
+  }
+
+  // visible for tests:
+  static final MMapIndexInputProvider<Object> PROVIDER;
+
+  interface MMapIndexInputProvider<A> {
+    IndexInput openInput(
+        Path path,
+        IOContext context,
+        int chunkSizePower,
+        boolean preload,
+        Optional<String> group,
+        A attachment)
+        throws IOException;
+
+    long getDefaultMaxChunkSize();
+
+    boolean supportsMadvise();
+
+    /** An optional attachment of the provider, that will be passed to openInput. */
+    default A attachment() {
+      return null;
+    }
+
+    default IOException convertMapFailedIOException(
+        IOException ioe, String resourceDescription, long bufSize) {
+      final String originalMessage;
+      final Throwable originalCause;
+      if (ioe.getCause() instanceof OutOfMemoryError) {
+        // nested OOM confuses users, because it's "incorrect", just print a plain message:
+        originalMessage = "Map failed";
+        originalCause = null;
+      } else {
+        originalMessage = ioe.getMessage();
+        originalCause = ioe.getCause();
+      }
+      final String moreInfo;
+      if (!Constants.JRE_IS_64BIT) {
+        moreInfo =
+            "MMapDirectory should only be used on 64bit platforms, because the address space on 32bit operating systems is too small. ";
+      } else if (Constants.WINDOWS) {
+        moreInfo =
+            "Windows is unfortunately very limited on virtual address space. If your index size is several hundred Gigabytes, consider changing to Linux. ";
+      } else if (Constants.LINUX) {
+        moreInfo =
+            "Please review 'ulimit -v', 'ulimit -m' (both should return 'unlimited'), and 'sysctl vm.max_map_count'. ";
+      } else {
+        moreInfo = "Please review 'ulimit -v', 'ulimit -m' (both should return 'unlimited'). ";
+      }
+      final IOException newIoe =
+          new IOException(
+              String.format(
+                  Locale.ENGLISH,
+                  "%s: %s [this may be caused by lack of enough unfragmented virtual address space "
+                      + "or too restrictive virtual memory limits enforced by the operating system, "
+                      + "preventing us to map a chunk of %d bytes. %sMore information: "
+                      + "https://blog.thetaphi.de/2012/07/use-lucenes-mmapdirectory-on-64bit.html]",
+                  originalMessage,
+                  resourceDescription,
+                  bufSize,
+                  moreInfo),
+              originalCause);
+      newIoe.setStackTrace(ioe.getStackTrace());
+      return newIoe;
     }
   }
 
-  /** Maps a file into a set of buffers */
-  final ByteBuffer[] map(String resourceDescription, FileChannel fc, long offset, long length)
-      throws IOException {
-    if ((length >>> chunkSizePower) >= Integer.MAX_VALUE)
-      throw new IllegalArgumentException(
-          "RandomAccessFile too big for chunk size: " + resourceDescription);
+  private static int getSharedArenaMaxPermitsSysprop() {
+    int ret = 1024; // default value
+    try {
+      String str = System.getProperty(SHARED_ARENA_MAX_PERMITS_SYSPROP);
+      if (str != null) {
+        ret = Integer.parseInt(str);
+      }
+    } catch (@SuppressWarnings("unused") NumberFormatException | SecurityException ignored) {
+      Logger.getLogger(MMapDirectory.class.getName())
+          .warning(
+              "Cannot read sysprop "
+                  + SHARED_ARENA_MAX_PERMITS_SYSPROP
+                  + ", so the default value will be used.");
+    }
+    return ret;
+  }
 
-    final long chunkSize = 1L << chunkSizePower;
-
-    // we always allocate one more buffer, the last one may be a 0 byte one
-    final int nrBuffers = (int) (length >>> chunkSizePower) + 1;
-
-    ByteBuffer[] buffers = new ByteBuffer[nrBuffers];
-
-    long bufferStart = 0L;
-    for (int bufNr = 0; bufNr < nrBuffers; bufNr++) {
-      int bufSize =
-          (int) ((length > (bufferStart + chunkSize)) ? chunkSize : (length - bufferStart));
-      MappedByteBuffer buffer;
+  private static <A> MMapIndexInputProvider<A> lookupProvider() {
+    final var maxPermits = getSharedArenaMaxPermitsSysprop();
+    final var lookup = MethodHandles.lookup();
+    try {
+      final var cls = lookup.findClass("org.apache.lucene.store.MemorySegmentIndexInputProvider");
+      // we use method handles, so we do not need to deal with setAccessible as we have private
+      // access through the lookup:
+      final var constr = lookup.findConstructor(cls, MethodType.methodType(void.class, int.class));
       try {
-        buffer = fc.map(MapMode.READ_ONLY, offset + bufferStart, bufSize);
-        buffer.order(ByteOrder.LITTLE_ENDIAN);
-      } catch (IOException ioe) {
-        throw convertMapFailedIOException(ioe, resourceDescription, bufSize);
+        return (MMapIndexInputProvider<A>) constr.invoke(maxPermits);
+      } catch (RuntimeException | Error e) {
+        throw e;
+      } catch (Throwable th) {
+        throw new AssertionError(th);
       }
-      if (preload) {
-        buffer.load();
-      }
-      buffers[bufNr] = buffer;
-      bufferStart += bufSize;
+    } catch (NoSuchMethodException | IllegalAccessException e) {
+      throw new LinkageError(
+          "MemorySegmentIndexInputProvider is missing correctly typed constructor", e);
+    } catch (ClassNotFoundException cnfe) {
+      throw new LinkageError("MemorySegmentIndexInputProvider is missing in Lucene JAR file", cnfe);
     }
-
-    return buffers;
   }
-
-  private IOException convertMapFailedIOException(
-      IOException ioe, String resourceDescription, int bufSize) {
-    final String originalMessage;
-    final Throwable originalCause;
-    if (ioe.getCause() instanceof OutOfMemoryError) {
-      // nested OOM confuses users, because it's "incorrect", just print a plain message:
-      originalMessage = "Map failed";
-      originalCause = null;
-    } else {
-      originalMessage = ioe.getMessage();
-      originalCause = ioe.getCause();
-    }
-    final String moreInfo;
-    if (!Constants.JRE_IS_64BIT) {
-      moreInfo =
-          "MMapDirectory should only be used on 64bit platforms, because the address space on 32bit operating systems is too small. ";
-    } else if (Constants.WINDOWS) {
-      moreInfo =
-          "Windows is unfortunately very limited on virtual address space. If your index size is several hundred Gigabytes, consider changing to Linux. ";
-    } else if (Constants.LINUX) {
-      moreInfo =
-          "Please review 'ulimit -v', 'ulimit -m' (both should return 'unlimited'), and 'sysctl vm.max_map_count'. ";
-    } else {
-      moreInfo = "Please review 'ulimit -v', 'ulimit -m' (both should return 'unlimited'). ";
-    }
-    final IOException newIoe =
-        new IOException(
-            String.format(
-                Locale.ENGLISH,
-                "%s: %s [this may be caused by lack of enough unfragmented virtual address space "
-                    + "or too restrictive virtual memory limits enforced by the operating system, "
-                    + "preventing us to map a chunk of %d bytes. %sMore information: "
-                    + "http://blog.thetaphi.de/2012/07/use-lucenes-mmapdirectory-on-64bit.html]",
-                originalMessage,
-                resourceDescription,
-                bufSize,
-                moreInfo),
-            originalCause);
-    newIoe.setStackTrace(ioe.getStackTrace());
-    return newIoe;
-  }
-
-  /** <code>true</code>, if this platform supports unmapping mmapped files. */
-  public static final boolean UNMAP_SUPPORTED;
 
   /**
-   * if {@link #UNMAP_SUPPORTED} is {@code false}, this contains the reason why unmapping is not
-   * supported.
+   * Returns true, if MMapDirectory uses the platform's {@code madvise()} syscall to advise how OS
+   * kernel should handle paging after opening a file.
    */
-  public static final String UNMAP_NOT_SUPPORTED_REASON;
-
-  /** Reference to a BufferCleaner that does unmapping; {@code null} if not supported. */
-  private static final BufferCleaner CLEANER;
+  public static boolean supportsMadvise() {
+    return PROVIDER.supportsMadvise();
+  }
 
   static {
-    final Object hack =
-        AccessController.doPrivileged((PrivilegedAction<Object>) MMapDirectory::unmapHackImpl);
-    if (hack instanceof BufferCleaner) {
-      CLEANER = (BufferCleaner) hack;
-      UNMAP_SUPPORTED = true;
-      UNMAP_NOT_SUPPORTED_REASON = null;
-    } else {
-      CLEANER = null;
-      UNMAP_SUPPORTED = false;
-      UNMAP_NOT_SUPPORTED_REASON = hack.toString();
-    }
-  }
-
-  @SuppressForbidden(
-      reason =
-          "Needs access to private APIs in DirectBuffer, sun.misc.Cleaner, and sun.misc.Unsafe to enable hack")
-  private static Object unmapHackImpl() {
-    final Lookup lookup = lookup();
-    try {
-      // *** sun.misc.Unsafe unmapping (Java 9+) ***
-      final Class<?> unsafeClass = Class.forName("sun.misc.Unsafe");
-      // first check if Unsafe has the right method, otherwise we can give up
-      // without doing any security critical stuff:
-      final MethodHandle unmapper =
-          lookup.findVirtual(
-              unsafeClass, "invokeCleaner", methodType(void.class, ByteBuffer.class));
-      // fetch the unsafe instance and bind it to the virtual MH:
-      final Field f = unsafeClass.getDeclaredField("theUnsafe");
-      f.setAccessible(true);
-      final Object theUnsafe = f.get(null);
-      return newBufferCleaner(ByteBuffer.class, unmapper.bindTo(theUnsafe));
-    } catch (SecurityException se) {
-      return "Unmapping is not supported, because not all required permissions are given to the Lucene JAR file: "
-          + se
-          + " [Please grant at least the following permissions: RuntimePermission(\"accessClassInPackage.sun.misc\") "
-          + " and ReflectPermission(\"suppressAccessChecks\")]";
-    } catch (ReflectiveOperationException | RuntimeException e) {
-      return "Unmapping is not supported on this platform, because internal Java APIs are not compatible with this Lucene version: "
-          + e;
-    }
-  }
-
-  private static BufferCleaner newBufferCleaner(
-      final Class<?> unmappableBufferClass, final MethodHandle unmapper) {
-    assert Objects.equals(methodType(void.class, ByteBuffer.class), unmapper.type());
-    return (String resourceDescription, ByteBuffer buffer) -> {
-      if (!buffer.isDirect()) {
-        throw new IllegalArgumentException("unmapping only works with direct buffers");
-      }
-      if (!unmappableBufferClass.isInstance(buffer)) {
-        throw new IllegalArgumentException(
-            "buffer is not an instance of " + unmappableBufferClass.getName());
-      }
-      final Throwable error =
-          AccessController.doPrivileged(
-              (PrivilegedAction<Throwable>)
-                  () -> {
-                    try {
-                      unmapper.invokeExact(buffer);
-                      return null;
-                    } catch (Throwable t) {
-                      return t;
-                    }
-                  });
-      if (error != null) {
-        throw new IOException("Unable to unmap the mapped buffer: " + resourceDescription, error);
-      }
-    };
+    PROVIDER = lookupProvider();
+    DEFAULT_MAX_CHUNK_SIZE = PROVIDER.getDefaultMaxChunkSize();
   }
 }
