@@ -18,7 +18,6 @@ package org.apache.lucene.index;
 
 import static com.carrotsearch.randomizedtesting.RandomizedTest.randomBoolean;
 import static com.carrotsearch.randomizedtesting.RandomizedTest.randomLongBetween;
-import static java.util.stream.Collectors.toList;
 
 import java.io.IOException;
 import java.util.ArrayList;
@@ -29,7 +28,6 @@ import java.util.List;
 import java.util.Random;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
-import org.apache.lucene.analysis.MockAnalyzer;
 import org.apache.lucene.document.Document;
 import org.apache.lucene.document.Field;
 import org.apache.lucene.document.LongPoint;
@@ -40,14 +38,17 @@ import org.apache.lucene.search.TermQuery;
 import org.apache.lucene.store.AlreadyClosedException;
 import org.apache.lucene.store.ByteBuffersDirectory;
 import org.apache.lucene.store.Directory;
-import org.apache.lucene.store.MockDirectoryWrapper;
-import org.apache.lucene.store.MockDirectoryWrapper.FakeIOException;
+import org.apache.lucene.tests.analysis.MockAnalyzer;
+import org.apache.lucene.tests.index.AssertingDirectoryReader;
+import org.apache.lucene.tests.index.DocHelper;
+import org.apache.lucene.tests.store.MockDirectoryWrapper;
+import org.apache.lucene.tests.store.MockDirectoryWrapper.FakeIOException;
+import org.apache.lucene.tests.util.LuceneTestCase;
+import org.apache.lucene.tests.util.LuceneTestCase.SuppressCodecs;
+import org.apache.lucene.tests.util.TestUtil;
 import org.apache.lucene.util.Bits;
 import org.apache.lucene.util.BytesRef;
 import org.apache.lucene.util.InfoStream;
-import org.apache.lucene.util.LuceneTestCase;
-import org.apache.lucene.util.LuceneTestCase.SuppressCodecs;
-import org.apache.lucene.util.TestUtil;
 import org.apache.lucene.util.ThreadInterruptedException;
 import org.apache.lucene.util.Version;
 import org.junit.Test;
@@ -81,7 +82,7 @@ public class TestIndexWriterReader extends LuceneTestCase {
 
     IndexWriter writer = new IndexWriter(dir1, iwc);
     for (int i = 0; i < 97; i++) {
-      DirectoryReader reader = writer.getReader();
+      DirectoryReader reader = DirectoryReader.open(writer);
       if (i == 0) {
         writer.addDocument(DocHelper.createDocument(i, "x", 1 + random().nextInt(5)));
       } else {
@@ -107,13 +108,13 @@ public class TestIndexWriterReader extends LuceneTestCase {
       reader.close();
     }
     writer.forceMerge(1); // make sure all merging is done etc.
-    DirectoryReader reader = writer.getReader();
+    DirectoryReader reader = DirectoryReader.open(writer);
     writer.commit(); // no changes that are not visible to the reader
 
     // A commit is now seen as a change to an NRT reader:
     assertFalse(reader.isCurrent());
     reader.close();
-    reader = writer.getReader();
+    reader = DirectoryReader.open(writer);
     assertTrue(reader.isCurrent());
     writer.close();
 
@@ -150,19 +151,19 @@ public class TestIndexWriterReader extends LuceneTestCase {
     // writer.flush(false, true, true);
 
     // get a reader
-    DirectoryReader r1 = writer.getReader();
+    DirectoryReader r1 = DirectoryReader.open(writer);
     assertTrue(r1.isCurrent());
 
-    String id10 = r1.document(10).getField("id").stringValue();
+    String id10 = r1.storedFields().document(10).getField("id").stringValue();
 
-    Document newDoc = r1.document(10);
+    Document newDoc = r1.storedFields().document(10);
     newDoc.removeField("id");
     newDoc.add(new Field("id", Integer.toString(8000), DocHelper.STRING_TYPE_STORED_WITH_TVS));
     writer.updateDocument(new Term("id", id10), newDoc);
     assertFalse(r1.isCurrent());
 
     System.out.println("TEST: now get reader");
-    DirectoryReader r2 = writer.getReader();
+    DirectoryReader r2 = DirectoryReader.open(writer);
     assertTrue(r2.isCurrent());
     assertEquals(0, count(new Term("id", id10), r2));
     if (VERBOSE) {
@@ -214,7 +215,7 @@ public class TestIndexWriterReader extends LuceneTestCase {
     writer = new IndexWriter(dir, iwc);
     doc = new Document();
     doc.add(newTextField("field", "a b c", Field.Store.NO));
-    DirectoryReader nrtReader = writer.getReader();
+    DirectoryReader nrtReader = DirectoryReader.open(writer);
     assertTrue(nrtReader.isCurrent());
     writer.addDocument(doc);
     assertFalse(nrtReader.isCurrent()); // should see the changes
@@ -223,7 +224,7 @@ public class TestIndexWriterReader extends LuceneTestCase {
     nrtReader.close();
 
     DirectoryReader dirReader = DirectoryReader.open(dir);
-    nrtReader = writer.getReader();
+    nrtReader = DirectoryReader.open(writer);
 
     assertTrue(dirReader.isCurrent());
     assertTrue(nrtReader.isCurrent()); // nothing was committed yet so we are still current
@@ -264,13 +265,13 @@ public class TestIndexWriterReader extends LuceneTestCase {
     createIndexNoClose(!doFullMerge, "index2", writer2);
     writer2.close();
 
-    DirectoryReader r0 = writer.getReader();
+    DirectoryReader r0 = DirectoryReader.open(writer);
     assertTrue(r0.isCurrent());
     writer.addIndexes(dir2);
     assertFalse(r0.isCurrent());
     r0.close();
 
-    DirectoryReader r1 = writer.getReader();
+    DirectoryReader r1 = DirectoryReader.open(writer);
     assertTrue(r1.isCurrent());
 
     writer.commit();
@@ -285,9 +286,9 @@ public class TestIndexWriterReader extends LuceneTestCase {
     assertEquals(100, index2df);
 
     // verify the docs are from different indexes
-    Document doc5 = r1.document(5);
+    Document doc5 = r1.storedFields().document(5);
     assertEquals("index1", doc5.get("indexname"));
-    Document doc150 = r1.document(150);
+    Document doc150 = r1.storedFields().document(150);
     assertEquals("index2", doc150.get("indexname"));
     r1.close();
     writer.close();
@@ -319,7 +320,7 @@ public class TestIndexWriterReader extends LuceneTestCase {
     writer.addIndexes(dir2);
     writer.addIndexes(dir2);
 
-    IndexReader r1 = writer.getReader();
+    IndexReader r1 = DirectoryReader.open(writer);
     assertEquals(500, r1.maxDoc());
 
     r1.close();
@@ -341,28 +342,28 @@ public class TestIndexWriterReader extends LuceneTestCase {
     createIndexNoClose(!doFullMerge, "index1", writer);
     writer.flush(false, true);
     // get a reader
-    IndexReader r1 = writer.getReader();
+    IndexReader r1 = DirectoryReader.open(writer);
 
-    String id10 = r1.document(10).getField("id").stringValue();
+    String id10 = r1.storedFields().document(10).getField("id").stringValue();
 
     // deleted IW docs should not show up in the next getReader
     writer.deleteDocuments(new Term("id", id10));
-    IndexReader r2 = writer.getReader();
+    IndexReader r2 = DirectoryReader.open(writer);
     assertEquals(1, count(new Term("id", id10), r1));
     assertEquals(0, count(new Term("id", id10), r2));
 
-    String id50 = r1.document(50).getField("id").stringValue();
+    String id50 = r1.storedFields().document(50).getField("id").stringValue();
     assertEquals(1, count(new Term("id", id50), r1));
 
     writer.deleteDocuments(new Term("id", id50));
 
-    IndexReader r3 = writer.getReader();
+    IndexReader r3 = DirectoryReader.open(writer);
     assertEquals(0, count(new Term("id", id10), r3));
     assertEquals(0, count(new Term("id", id50), r3));
 
-    String id75 = r1.document(75).getField("id").stringValue();
+    String id75 = r1.storedFields().document(75).getField("id").stringValue();
     writer.deleteDocuments(new TermQuery(new Term("id", id75)));
-    IndexReader r4 = writer.getReader();
+    IndexReader r4 = DirectoryReader.open(writer);
     assertEquals(1, count(new Term("id", id75), r3));
     assertEquals(0, count(new Term("id", id75), r4));
 
@@ -377,14 +378,13 @@ public class TestIndexWriterReader extends LuceneTestCase {
         new IndexWriter(
             dir1,
             newIndexWriterConfig(new MockAnalyzer(random())).setMaxFullFlushMergeWaitMillis(0));
-    IndexReader w2r1 = writer.getReader();
+    IndexReader w2r1 = DirectoryReader.open(writer);
     assertEquals(0, count(new Term("id", id10), w2r1));
     w2r1.close();
     writer.close();
     dir1.close();
   }
 
-  @Slow
   public void testAddIndexesAndDoDeletesThreads() throws Throwable {
     final int numIter = TEST_NIGHTLY ? 2 : 1;
     int numDirs = TEST_NIGHTLY ? 3 : 2;
@@ -409,7 +409,7 @@ public class TestIndexWriterReader extends LuceneTestCase {
 
     addDirThreads.close(true);
 
-    assertTrue(addDirThreads.failures.size() == 0);
+    assertTrue(addDirThreads.failures.isEmpty());
 
     TestUtil.checkIndex(mainDir);
 
@@ -554,15 +554,15 @@ public class TestIndexWriterReader extends LuceneTestCase {
         new IndexWriter(
             dir1,
             newIndexWriterConfig(new MockAnalyzer(random())).setMaxFullFlushMergeWaitMillis(0));
-    IndexReader r1 = writer.getReader();
+    IndexReader r1 = DirectoryReader.open(writer);
     assertEquals(0, r1.maxDoc());
     createIndexNoClose(false, "index1", writer);
     writer.flush(!doFullMerge, true);
 
-    IndexReader iwr1 = writer.getReader();
+    IndexReader iwr1 = DirectoryReader.open(writer);
     assertEquals(100, iwr1.maxDoc());
 
-    IndexReader r2 = writer.getReader();
+    IndexReader r2 = DirectoryReader.open(writer);
     assertEquals(r2.maxDoc(), 100);
     // add 100 documents
     for (int x = 10000; x < 10000 + 100; x++) {
@@ -571,11 +571,11 @@ public class TestIndexWriterReader extends LuceneTestCase {
     }
     writer.flush(false, true);
     // verify the reader was reopened internally
-    IndexReader iwr2 = writer.getReader();
+    IndexReader iwr2 = DirectoryReader.open(writer);
     assertTrue(iwr2 != r1);
     assertEquals(200, iwr2.maxDoc());
     // should have flushed out a segment
-    IndexReader r3 = writer.getReader();
+    IndexReader r3 = DirectoryReader.open(writer);
     assertTrue(r2 != r3);
     assertEquals(200, r3.maxDoc());
 
@@ -593,7 +593,7 @@ public class TestIndexWriterReader extends LuceneTestCase {
         new IndexWriter(
             dir1,
             newIndexWriterConfig(new MockAnalyzer(random())).setMaxFullFlushMergeWaitMillis(0));
-    IndexReader w2r1 = writer.getReader();
+    IndexReader w2r1 = DirectoryReader.open(writer);
     // insure the deletes were actually flushed to the directory
     assertEquals(200, w2r1.maxDoc());
     w2r1.close();
@@ -607,7 +607,7 @@ public class TestIndexWriterReader extends LuceneTestCase {
    *
    * public static int deleteDocument(Term term, IndexWriter writer) throws
    * IOException { IndexReader reader = writer.getReader(); TermDocs td =
-   * reader.termDocs(term); int doc = -1; //if (td.next()) { // doc = td.doc();
+   * reader.termDocs(term); int doc = -1; //if (td.next()) { // doc = td.storedFields().document();
    * //} //writer.deleteDocuments(term); td.close(); return doc; }
    */
 
@@ -655,7 +655,7 @@ public class TestIndexWriterReader extends LuceneTestCase {
     createIndexNoClose(false, "test", writer);
 
     // get a reader to put writer into near real-time mode
-    IndexReader r1 = writer.getReader();
+    IndexReader r1 = DirectoryReader.open(writer);
 
     ((LogMergePolicy) writer.getConfig().getMergePolicy()).setMergeFactor(2);
 
@@ -691,7 +691,7 @@ public class TestIndexWriterReader extends LuceneTestCase {
     createIndexNoClose(false, "test", writer);
 
     // get a reader to put writer into near real-time mode
-    DirectoryReader r1 = writer.getReader();
+    DirectoryReader r1 = DirectoryReader.open(writer);
     TestUtil.checkIndex(dir1);
     writer.commit();
     TestUtil.checkIndex(dir1);
@@ -724,7 +724,7 @@ public class TestIndexWriterReader extends LuceneTestCase {
     // create the index
     createIndexNoClose(false, "test", writer);
 
-    DirectoryReader r = writer.getReader();
+    DirectoryReader r = DirectoryReader.open(writer);
     writer.close();
 
     TestUtil.checkIndex(dir1);
@@ -735,11 +735,7 @@ public class TestIndexWriterReader extends LuceneTestCase {
     IndexSearcher searcher = newSearcher(r);
     assertEquals(100, searcher.count(q));
 
-    expectThrows(
-        AlreadyClosedException.class,
-        () -> {
-          DirectoryReader.openIfChanged(r);
-        });
+    expectThrows(AlreadyClosedException.class, () -> DirectoryReader.openIfChanged(r));
 
     r.close();
     dir1.close();
@@ -765,10 +761,10 @@ public class TestIndexWriterReader extends LuceneTestCase {
       dirs[i] = new MockDirectoryWrapper(random(), TestUtil.ramCopyOf(dir1));
     }
 
-    DirectoryReader r = writer.getReader();
+    DirectoryReader r = DirectoryReader.open(writer);
 
     final int numIterations = 10;
-    final List<Throwable> excs = Collections.synchronizedList(new ArrayList<Throwable>());
+    final List<Throwable> excs = Collections.synchronizedList(new ArrayList<>());
 
     // Only one thread can addIndexes at a time, because
     // IndexWriter acquires a write lock in each directory:
@@ -811,8 +807,8 @@ public class TestIndexWriterReader extends LuceneTestCase {
       }
     }
 
-    for (int i = 0; i < threads.length; i++) {
-      threads[i].join();
+    for (Thread thread : threads) {
+      thread.join();
     }
     // final check
     DirectoryReader r2 = DirectoryReader.openIfChanged(r);
@@ -852,7 +848,7 @@ public class TestIndexWriterReader extends LuceneTestCase {
         newIndexWriterConfig(new MockAnalyzer(random())).setMergePolicy(newLogMergePolicy(2));
     if (TEST_NIGHTLY) {
       // if we have a ton of iterations we need to make sure we don't do unnecessary
-      // extra flushing otherwise we will timeout on nightly
+      // extra flushing otherwise we will time out on nightly
       iwc.setRAMBufferSizeMB(IndexWriterConfig.DEFAULT_RAM_BUFFER_SIZE_MB);
       iwc.setMaxBufferedDocs(IndexWriterConfig.DISABLE_AUTO_FLUSH);
     }
@@ -862,7 +858,7 @@ public class TestIndexWriterReader extends LuceneTestCase {
     createIndexNoClose(false, "test", writer);
     writer.commit();
 
-    DirectoryReader r = writer.getReader();
+    DirectoryReader r = DirectoryReader.open(writer);
 
     final int iters = TEST_NIGHTLY ? 1000 : 10;
     final List<Throwable> excs = Collections.synchronizedList(new ArrayList<>());
@@ -949,7 +945,7 @@ public class TestIndexWriterReader extends LuceneTestCase {
     w.addDocument(doc);
     w.deleteDocuments(new Term("id", "0"));
 
-    IndexReader r = w.getReader();
+    IndexReader r = DirectoryReader.open(w);
     w.forceMergeDeletes();
     w.close();
     r.close();
@@ -971,17 +967,17 @@ public class TestIndexWriterReader extends LuceneTestCase {
     w.addDocument(doc);
     id.setStringValue("1");
     w.addDocument(doc);
-    IndexReader r = w.getReader();
+    IndexReader r = DirectoryReader.open(w);
     assertEquals(2, r.numDocs());
     r.close();
 
     w.deleteDocuments(new Term("id", "0"));
-    r = w.getReader();
+    r = DirectoryReader.open(w);
     assertEquals(1, r.numDocs());
     r.close();
 
     w.deleteDocuments(new Term("id", "1"));
-    r = w.getReader();
+    r = DirectoryReader.open(w);
     assertEquals(0, r.numDocs());
     r.close();
 
@@ -993,7 +989,7 @@ public class TestIndexWriterReader extends LuceneTestCase {
     // Ensures that getReader works on an empty index, which hasn't been committed yet.
     Directory dir = newDirectory();
     IndexWriter w = new IndexWriter(dir, newIndexWriterConfig(new MockAnalyzer(random())));
-    IndexReader r = w.getReader();
+    IndexReader r = DirectoryReader.open(w);
     assertEquals(0, r.numDocs());
     r.close();
     w.close();
@@ -1003,6 +999,8 @@ public class TestIndexWriterReader extends LuceneTestCase {
   public void testSegmentWarmer() throws Exception {
     Directory dir = newDirectory();
     final AtomicBoolean didWarm = new AtomicBoolean();
+    LogMergePolicy mp = newLogMergePolicy(10);
+    mp.setTargetSearchConcurrency(1);
     IndexWriter w =
         new IndexWriter(
             dir,
@@ -1016,7 +1014,7 @@ public class TestIndexWriterReader extends LuceneTestCase {
                       assertEquals(20, count);
                       didWarm.set(true);
                     })
-                .setMergePolicy(newLogMergePolicy(10)));
+                .setMergePolicy(mp));
 
     Document doc = new Document();
     doc.add(newStringField("foo", "bar", Field.Store.NO));
@@ -1049,6 +1047,8 @@ public class TestIndexWriterReader extends LuceneTestCase {
             return true;
           }
         };
+    LogMergePolicy mp = newLogMergePolicy(10);
+    mp.setTargetSearchConcurrency(1);
     IndexWriter w =
         new IndexWriter(
             dir,
@@ -1057,7 +1057,7 @@ public class TestIndexWriterReader extends LuceneTestCase {
                 .setReaderPooling(true)
                 .setInfoStream(infoStream)
                 .setMergedSegmentWarmer(new SimpleMergedSegmentWarmer(infoStream))
-                .setMergePolicy(newLogMergePolicy(10)));
+                .setMergePolicy(mp));
 
     Document doc = new Document();
     doc.add(newStringField("foo", "bar", Field.Store.NO));
@@ -1076,7 +1076,7 @@ public class TestIndexWriterReader extends LuceneTestCase {
         new IndexWriter(
             d, newIndexWriterConfig(new MockAnalyzer(random())).setMaxFullFlushMergeWaitMillis(0));
 
-    DirectoryReader r = w.getReader(); // start pooling readers
+    DirectoryReader r = DirectoryReader.open(w); // start pooling readers
 
     DirectoryReader r2 = DirectoryReader.openIfChanged(r);
     assertNull(r2);
@@ -1137,7 +1137,7 @@ public class TestIndexWriterReader extends LuceneTestCase {
 
     // create a segment and open an NRT reader
     writer.addDocument(new Document());
-    writer.getReader().close();
+    DirectoryReader.open(writer).close();
 
     // add a new document so a new NRT reader is required
     writer.addDocument(new Document());
@@ -1147,11 +1147,7 @@ public class TestIndexWriterReader extends LuceneTestCase {
     // other NRT reader, since it is already marked closed!
     for (int i = 0; i < 2; i++) {
       shouldFail.set(true);
-      expectThrows(
-          FakeIOException.class,
-          () -> {
-            writer.getReader().close();
-          });
+      expectThrows(FakeIOException.class, () -> DirectoryReader.open(writer).close());
     }
 
     writer.close();
@@ -1213,7 +1209,7 @@ public class TestIndexWriterReader extends LuceneTestCase {
     final long MISSING_VALUE =
         ASC_SORT ? Long.MAX_VALUE : Long.MIN_VALUE; // missing values at the end
 
-    // create a comparator that sort leaf readers according with
+    // create a comparator that sort leaf readers according to
     // the min value (asc sort) or max value (desc sort) of its points
     Comparator<LeafReader> leafSorter =
         Comparator.comparingLong(
@@ -1249,7 +1245,7 @@ public class TestIndexWriterReader extends LuceneTestCase {
 
     // Test1: test that leafReaders are sorted according to leafSorter provided in IndexWriterConfig
     {
-      try (DirectoryReader reader = writer.getReader()) {
+      try (DirectoryReader reader = DirectoryReader.open(writer)) {
         assertLeavesSorted(reader, leafSorter);
 
         // add more documents that should be sorted first
@@ -1346,13 +1342,9 @@ public class TestIndexWriterReader extends LuceneTestCase {
   // provided leafSorter
   private static void assertLeavesSorted(
       DirectoryReader reader, Comparator<LeafReader> leafSorter) {
-    List<LeafReader> lrs =
-        reader.leaves().stream().map(LeafReaderContext::reader).collect(toList());
+    List<LeafReader> lrs = reader.leaves().stream().map(LeafReaderContext::reader).toList();
     List<LeafReader> expectedSortedlrs =
-        reader.leaves().stream()
-            .map(LeafReaderContext::reader)
-            .sorted(leafSorter)
-            .collect(toList());
+        reader.leaves().stream().map(LeafReaderContext::reader).sorted(leafSorter).toList();
     assertEquals(expectedSortedlrs, lrs);
   }
 }
